fixed z-index on book read icon

--- a/styles.css
+++ b/styles.css
@@ -230,7 +230,7 @@ input[type=text]:focus {
     background-position: center;
     background-repeat: no-repeat;
     background-size: 40px 30px;
-    z-index: 1;
+
 }
 
 .bookOpenIcon {
@@ -239,7 +239,7 @@ input[type=text]:focus {
     background-position: center;
     background-repeat: no-repeat;
     background-size: 40px 30px;
-    z-index: 1;
+    
 }
 
 .bookClosedIcon:hover,
